# api/config_center/controller/ecsAuth.go
@@ -20,7 +20,7 @@ func NewEcsAuthController() *EcsAuthController {
 
 // GetEcsAuthList 获取所有凭据
 // @Summary 获取所有凭据
-// @Tags 配置中心
+// @Tags Config配置中心
 // @Success 200 {object} result.Result{data=[]model.EcsAuthVo}
 // @Router /api/v1/config/ecsauthlist [get]
 // @Security ApiKeyAuth
@@ -30,7 +30,7 @@ func (c *EcsAuthController) GetEcsAuthList(ctx *gin.Context) {
 
 // CreateEcsAuth 创建凭据
 // @Summary 创建凭据
-// @Tags 配置中心
+// @Tags Config配置中心
 // @Param data body model.CreateEcsPasswordAuthDto true "凭据信息"
 // @Success 200 {object} result.Result
 // @Router /api/v1/config/ecsauthadd [post]
@@ -46,7 +46,7 @@ func (c *EcsAuthController) CreateEcsAuth(ctx *gin.Context) {
 
 // GetEcsAuthByName 根据名称获取凭据
 // @Summary 根据名称获取凭据
-// @Tags 配置中心
+// @Tags Config配置中心
 // @Param name query string true "凭据名称"
 // @Success 200 {object} result.Result{data=model.EcsAuthVo}
 // @Router /api/v1/config/ecsauthinfo [get]
@@ -62,7 +62,7 @@ func (c *EcsAuthController) GetEcsAuthByName(ctx *gin.Context) {
 
 // UpdateEcsAuth 更新凭据
 // @Summary 更新凭据
-// @Tags 配置中心
+// @Tags Config配置中心
 // @Param data body model.UpdateEcsAuthDto true "凭据信息"
 // @Success 200 {object} result.Result
 // @Router /api/v1/config/ecsauthupdate [put]
@@ -78,7 +78,7 @@ func (c *EcsAuthController) UpdateEcsAuth(ctx *gin.Context) {
 
 // DeleteEcsAuth 删除凭据
 // @Summary 删除凭据
-// @Tags 配置中心
+// @Tags Config配置中心
 // @Param data body model.EcsAuthIdDto true "凭据ID"
 // @Success 200 {object} result.Result
 // @Router /api/v1/config/ecsauthdelete [delete]
