# api/system/controller/controller.go
@@ -8,7 +8,7 @@ import (
 	"gin-api/common/result"
 	"github.com/gin-gonic/gin"
 )
-
+// @Tags System系统管理
 // @Summary 验证码接口
 // @Produce json
 // @Description 验证码接口
