# api/system/controller/sysLogininfo.go
@@ -11,7 +11,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 分页获取登录日志列表
 // @Summary 分页获取登录日志列表接口
 // @Produce json
@@ -35,7 +35,7 @@ func GetSysLoginInfoList(c *gin.Context) {
 	service.SysLoginInfoService().GetSysLoginInfoList(c, Username, LoginStatus, BeginTime, EndTime, PageSize, PageNum)
 }
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 批量删除登录日志
 // @Summary 批量删除登录日志接口
 // @Produce json
@@ -50,7 +50,7 @@ func BatchDeleteSysLoginInfo(c *gin.Context) {
 	service.SysLoginInfoService().BatchDeleteSysLoginInfo(c, dto)
 }
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 根据ID删除登录日志
 // @Summary 根据ID删除登录日志接口
 // @Produce json
@@ -65,7 +65,7 @@ func DeleteSysLoginInfoById(c *gin.Context) {
 	service.SysLoginInfoService().DeleteSysLoginInfo(c, dto)
 }
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 清空登录日志
 // @Summary 清空登录日志接口
 // @Produce json
