# api/system/controller/sysOperationLog.go
@@ -11,7 +11,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 分页获取操作日志列表
 // @Summary 分页获取操作日志列表接口
 // @Produce json
@@ -33,7 +33,7 @@ func GetSysOperationLogList(c *gin.Context) {
 	service.SysOperationLogService().GetSysOperationLogList(c, Username, BeginTime, EndTime, PageSize, PageNum)
 }
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 根据id删除操作日志
 // @Summary 根据id删除操作日志
 // @Produce json
@@ -48,7 +48,7 @@ func DeleteSysOperationLogById(c *gin.Context) {
 	service.SysOperationLogService().DeleteSysOperationLogById(c, dto)
 }
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 批量删除操作日志
 // @Summary 批量删除操作日志接口
 // @Produce json
@@ -63,7 +63,7 @@ func BatchDeleteSysOperationLog(c *gin.Context) {
 	service.SysOperationLogService().BatchDeleteSysOperationLog(c, dto)
 }
 
-// @Tags system系统管理
+// @Tags System系统管理
 // 清空操作日志
 // @Summary 清空操作日志接口
 // @Produce json
