# docs/swagger.json
@@ -19,7 +19,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "新增用户接口",
                 "parameters": [
@@ -55,7 +55,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id删除用户接口",
                 "parameters": [
@@ -91,7 +91,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id查询用户接口",
                 "parameters": [
@@ -125,7 +125,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "分页获取用户列表接口",
                 "parameters": [
@@ -188,7 +188,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "修改用户接口",
                 "parameters": [
@@ -224,7 +224,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "重置密码接口",
                 "parameters": [
@@ -260,7 +260,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "修改个人信息接口",
                 "parameters": [
@@ -296,7 +296,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "修改用户密码接口",
                 "parameters": [
@@ -332,7 +332,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "用户状态启用/停用接口",
                 "parameters": [
@@ -362,6 +362,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "System系统管理"
+                ],
                 "summary": "验证码接口",
                 "responses": {
                     "200": {
@@ -385,7 +388,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "k8s集群列表"
+                    "K8s集群列表"
                 ],
                 "summary": "k8s集群列表接口",
                 "responses": {
@@ -413,7 +416,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "k8s集群列表"
+                    "K8s集群列表"
                 ],
                 "summary": "创建Kubernetes集群",
                 "parameters": [
@@ -452,7 +455,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "k8s集群列表"
+                    "K8s集群列表"
                 ],
                 "summary": "更新Kubernetes集群信息",
                 "parameters": [
@@ -651,7 +654,7 @@
                     }
                 ],
                 "tags": [
-                    "配置中心"
+                    "Config配置中心"
                 ],
                 "summary": "创建凭据",
                 "parameters": [
@@ -683,7 +686,7 @@
                     }
                 ],
                 "tags": [
-                    "配置中心"
+                    "Config配置中心"
                 ],
                 "summary": "删除凭据",
                 "parameters": [
@@ -715,7 +718,7 @@
                     }
                 ],
                 "tags": [
-                    "配置中心"
+                    "Config配置中心"
                 ],
                 "summary": "根据名称获取凭据",
                 "parameters": [
@@ -757,7 +760,7 @@
                     }
                 ],
                 "tags": [
-                    "配置中心"
+                    "Config配置中心"
                 ],
                 "summary": "获取所有凭据",
                 "responses": {
@@ -793,7 +796,7 @@
                     }
                 ],
                 "tags": [
-                    "配置中心"
+                    "Config配置中心"
                 ],
                 "summary": "更新凭据",
                 "parameters": [
@@ -829,7 +832,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "新增部门接口",
                 "parameters": [
@@ -865,7 +868,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id删除部门接口",
                 "parameters": [
@@ -901,7 +904,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id查询部门接口",
                 "parameters": [
@@ -935,7 +938,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "查询部门列表接口",
                 "parameters": [
@@ -974,7 +977,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "修改部门接口",
                 "parameters": [
@@ -1010,7 +1013,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "获取某部门下的所有用户接口",
                 "parameters": [
@@ -1044,7 +1047,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "部门下拉列表接口",
                 "responses": {
@@ -1064,7 +1067,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "用户登录接口",
                 "parameters": [
@@ -1100,7 +1103,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "新增菜单接口",
                 "parameters": [
@@ -1136,7 +1139,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id删除菜单接口",
                 "parameters": [
@@ -1172,7 +1175,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id查询菜单",
                 "parameters": [
@@ -1206,7 +1209,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "查询菜单列表",
                 "parameters": [
@@ -1245,7 +1248,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "修改菜单接口",
                 "parameters": [
@@ -1281,7 +1284,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "查询新增选项列表接口",
                 "responses": {
@@ -1306,7 +1309,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "新增岗位接口",
                 "parameters": [
@@ -1342,7 +1345,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "批量删除岗位接口",
                 "parameters": [
@@ -1378,7 +1381,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id删除岗位接口",
                 "parameters": [
@@ -1414,7 +1417,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id查询岗位",
                 "parameters": [
@@ -1448,7 +1451,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "分页查询岗位列表",
                 "parameters": [
@@ -1511,7 +1514,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "修改岗位接口",
                 "parameters": [
@@ -1547,7 +1550,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "岗位状态修改接口",
                 "parameters": [
@@ -1583,7 +1586,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "岗位下拉列表",
                 "responses": {
@@ -1608,7 +1611,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "新增角色接口",
                 "parameters": [
@@ -1644,7 +1647,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "分配权限接口",
                 "parameters": [
@@ -1680,7 +1683,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id删除角色接口",
                 "parameters": [
@@ -1716,7 +1719,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id查询角色接口",
                 "parameters": [
@@ -1750,7 +1753,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "分页查询角色列表接口",
                 "parameters": [
@@ -1813,7 +1816,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "修改角色",
                 "parameters": [
@@ -1849,7 +1852,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "角色状态启用/停用接口",
                 "parameters": [
@@ -1885,7 +1888,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据角色id查询菜单数据接口",
                 "parameters": [
@@ -1919,7 +1922,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "角色下拉列表",
                 "responses": {
@@ -1944,7 +1947,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "批量删除登录日志接口",
                 "parameters": [
@@ -1980,7 +1983,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "清空登录日志接口",
                 "responses": {
@@ -2005,7 +2008,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据ID删除登录日志接口",
                 "parameters": [
@@ -2041,7 +2044,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "分页获取登录日志列表接口",
                 "parameters": [
@@ -2104,7 +2107,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "批量删除操作日志接口",
                 "parameters": [
@@ -2140,7 +2143,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "清空操作日志接口",
                 "responses": {
@@ -2165,7 +2168,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "根据id删除操作日志",
                 "parameters": [
@@ -2201,7 +2204,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "分页获取操作日志列表接口",
                 "parameters": [
@@ -2261,7 +2264,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "system系统管理"
+                    "System系统管理"
                 ],
                 "summary": "单图片上传接口",
                 "parameters": [
